# workmaite

./: ._PROGRESS.md  .gitignore  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  WorkmAIte_PRO_Launcher.bat  WorkmAIte_SILENT.vbs
.agents/skills/: ArchViz_Render_Prompt.md  Draft_GST_Invoice.md
Default_Knowledge_Base/: ADHD_Coping_Frameworks.md  Creative_Pricing.md  India_Business_Laws.md
core/: prune_context.py  resource_manager.py  state_manager.py
deck/: app.js  index.html  server.py
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: main.toml  sidecars.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat_commands.rs  db_commands.rs  focus_commands.rs  memory_commands.rs  mod.rs  system_commands.rs  voice_commands.rs
src-tauri/src/db/: mod.rs
src-tauri/src/mcp/: client.rs
src-tauri/src/sidecar/: living_loop.rs  llm.rs  mod.rs  stt.rs  tts.rs
src/lib/components/: ChatPanel.svelte  FocusTimer.svelte  GhostOverlay.svelte  PersonalityToggle.svelte  SystemMonitor.svelte
src/routes/: +page.svelte
src/styles/: index.css
tools/: app_control.py  file_op.py  local_shell.py  sys_info.py
